# internal/handler/api/swagger_params.go
@@ -2,7 +2,7 @@
 package api
 
 // ID path parameter. Linked to every operation whose path contains an {id} segment.
-// swagger:parameters addLifecycleStage addMember adminDeleteUser adminGetUser adminUpdateUser approveDeployment cancelDeployment createDeployment createRelease createSchedule createStep createVariable deleteEnvironment deleteLifecycleStage deleteProject deleteSchedule deleteStep deleteTemplate deleteVariable deploymentEvents exportLogs getDeployment getDeploymentStatus getEnvironment getLifecycle getLog getProject getProjectNotifications getRelease getSchedule getStep getTemplate getTemplateHistory getVariable listDeploymentLogs listDeployments listMembers listReleases listSchedules listSteps listVariables redeployDeployment refreshRelease removeMember reorderLifecycleStages reorderSteps retryDeployment revokeAnyToken revokeToken saveLifecycle streamLogs templatesPicker toggleSchedule updateEnvironment updateLifecycleStage updateMemberRole updateProject updateProjectNotifications updateSchedule updateStep updateTemplate updateVariable listRunbooks createRunbook getRunbook saveRunbookVersion getRunbookVersion executeRunbook listRunbookExecutions getRunbookExecution listRunbookLogs streamRunbookLogs cancelRunbookExecution approveRunbookExecution retryRunbookExecution listRunbookSchedules createRunbookSchedule disableRunbookSchedule
+// swagger:parameters addLifecycleStage addMember adminDeleteUser adminGetUser adminUpdateUser approveDeployment cancelDeployment createDeployment createRelease createSchedule createStep createVariable deleteEnvironment deleteLifecycleStage deleteProject deleteRelease deleteSchedule deleteStep deleteTemplate deleteVariable deploymentEvents exportLogs getDeployment getDeploymentStatus getEnvironment getLifecycle getLog getProject getProjectNotifications getRelease getSchedule getStep getTemplate getTemplateHistory getVariable listDeploymentLogs listDeployments listMembers listReleases listSchedules listSteps listVariables redeployDeployment refreshRelease removeMember reorderLifecycleStages reorderSteps retryDeployment revokeAnyToken revokeToken saveLifecycle streamLogs templatesPicker toggleSchedule updateEnvironment updateLifecycleStage updateMemberRole updateProject updateProjectNotifications updateSchedule updateStep updateTemplate updateVariable listRunbooks createRunbook getRunbook saveRunbookVersion getRunbookVersion executeRunbook listRunbookExecutions getRunbookExecution listRunbookLogs streamRunbookLogs cancelRunbookExecution approveRunbookExecution retryRunbookExecution listRunbookSchedules createRunbookSchedule disableRunbookSchedule
 type idPathParam struct {
 	// The resource ID.
 	//
@@ -50,7 +50,7 @@ type stepIDPathParam struct {
 }
 
 // relId path parameter.
-// swagger:parameters getRelease refreshRelease
+// swagger:parameters getRelease refreshRelease deleteRelease
 type relIDPathParam struct {
 	// The release ID.
 	//
